GitHub link added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <footer>
       <small>
         This project was coded by Ekaterina Volkova and is
-        <a href="">open sourced on GitHub</a>
+        <a href="https://github.com/Ekaterina870/world-clock-project"
+          >open sourced on GitHub</a
+        >
       </small>
     </footer>
     <script src="../src/index.js"></script>
