--- a/index.html
+++ b/index.html
@@ -8,7 +8,39 @@
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select name="" id="">
+        <option value="">Type a city name</option>
+        <option value="">Berlin</option>
+        <option value="">Paris</option>
+        <option value="">Los Angeles</option>
+        <option value="">Beijing</option>
+      </select>
+      <div class="city">
+        <div>
+          <h2>London</h2>
+          <div class="date">May 27th 2023</div>
+        </div>
+        <div class="time">10:38:15 <small> PM</small></div>
+      </div>
+
+      <div class="city">
+        <div>
+          <h2>New York</h2>
+          <div class="date">May 27th 2023</div>
+        </div>
+        <div class="time">10:38:15 <small>PM</small></div>
+      </div>
+
+      <div class="city">
+        <div>
+          <h2>Sydney</h2>
+          <div class="date">May 27th 2023</div>
+        </div>
+        <div class="time">10:38:15 <small>PM</small></div>
+      </div>
+    </div>
     <footer>
       <small>
         This project was coded by Ekaterina Volkova and is
