--- a/index.html
+++ b/index.html
@@ -12,35 +12,37 @@
   <body>
     <div class="container">
       <h1>World Clock</h1>
-      <select name="" id="">
-        <option value="">Type a city name</option>
-        <option value="">Berlin</option>
-        <option value="">Paris</option>
-        <option value="">Los Angeles</option>
-        <option value="">Beijing</option>
+      <select id="city">
+        <option value="">Select a city name</option>
+        <option value="Europe/Berlin">Berlin</option>
+        <option value="Europe/Paris">Paris</option>
+        <option value="America/Los_Angeles">Los Angeles</option>
+        <option value="Asia/Tokyo">Tokyo</option>
       </select>
-      <div class="city" id="london">
-        <div>
-          <h2>London</h2>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="london">
+          <div>
+            <h2>London</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
 
-      <div class="city" id="new-york">
-        <div>
-          <h2>New York</h2>
-          <div class="date"></div>
+        <div class="city" id="new-york">
+          <div>
+            <h2>New York</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
 
-      <div class="city" id="sydney">
-        <div>
-          <h2>Sydney</h2>
-          <div class="date"></div>
+        <div class="city" id="sydney">
+          <div>
+            <h2>Sydney</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
     </div>
     <footer>
