current location added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div class="container">
       <h1>World Clock</h1>
       <select id="city">
-        <option value="">Select a city name</option>
+        <option value="">Select a city...</option>
+        <option value="current">My current location</option>
         <option value="Europe/Berlin">Berlin</option>
         <option value="Europe/Paris">Paris</option>
         <option value="America/Los_Angeles">Los Angeles</option>
@@ -48,7 +49,9 @@
     <footer>
       <small>
         This project was coded by Ekaterina Volkova and is
-        <a href="https://github.com/Ekaterina870/world-clock-project"
+        <a
+          href="https://github.com/Ekaterina870/world-clock-project"
+          target="_blank"
           >open sourced on GitHub</a
         >
       </small>
