--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <select id="city">
         <option value="">Select a city...</option>
         <option value="current">My current location</option>
-        <option value="Europe/Berlin">Berlin</option>
+        <option value="Africa/Johannesburg">Johannesburg</option>
         <option value="Europe/Paris">Paris</option>
         <option value="America/Los_Angeles">Los Angeles</option>
         <option value="Asia/Tokyo">Tokyo</option>
