--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Lobster&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../src/styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.min.js"></script>
@@ -47,14 +53,14 @@
       </div>
     </div>
     <footer>
-      <small>
-        This project was coded by Ekaterina Volkova and is
+      <strong>
         <a
           href="https://github.com/Ekaterina870/world-clock-project"
           target="_blank"
-          >open sourced on GitHub</a
+          >open-source code</a
         >
-      </small>
+        by Ekaterina Volkova
+      </strong>
     </footer>
     <script src="../src/index.js"></script>
   </body>
